<resources>
    <string name="app_name">ProyectoMovil</string>
    <string name="tvtitulologin">INICIAR SESION</string>
    <string name="etemail">Ingresar Correo</string>
    <string name="etpassword">Ingresar Contraseña</string>
    <string name="btningresar">INGRESAR</string>
    <string name="btnregistrarse">REGISTRARSE</string>

    <string name="tvtituloregistro">REGISTRO USUARIO</string>
    <string name="etnombre">Ingresar Nombre</string>
    <string name="etapellido">Ingresar Apellido</string>
    <string name="etDNI">Ingresar DNI</string>
    <string name="ettelefono">Ingresar N° Telefono</string>
    <string name="etdireccion">Ingresar Direccion</string>
    <string name="etcorreo">Ingresar Correo</string>
    <string name="etcontraseña">Ingresar Contraseña</string>
    <string name="btnregistado">REGISTRADO</string>
    <string name="btnregresar">Ir al Login</string>
    <string name="etBuscarpor">Buscar comida</string>
    <string name="txtmonto1">Monto a Pagar</string>

    <string name="valcarritosplashtxt">Actualizando...</string>
    <string name="valpasarelatitulo">Ingrese los datos de su tarjeta</string>
    <string name="valpasarelatextomonto">Monto a cargar:</string>

    <string name="title_activity_maps">MapsActivity</string>

    //mios
    <string name="title_activity_motorizado">MotorizadoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Motorizado</string>
    <string name="nav_header_subtitle">motorizado@eatsfree.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Pedidos por Atender</string>
    <string name="menu_gallery">Pedidos Gestionados</string>
    <string name="menu_slideshow">Veremos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavlistapedidofrag">Lista Pedidos</string>
    <string name="valnavvoluntariofrag">Voluntario</string>
    <string name="valetusuario">Ingrese Usuario</string>
    <string name="valetpassword">Ingrese Password</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="valchkguardardatos">¿Guardar Datos?</string>
    <string name="valbtnregistrarme">Regresar al Inicio</string>

    //textos pegados
    <string name="tvtituloregistro2">REGISTRARME</string>
    <string name="valetnomusuario">Ingrese su nombre</string>
    <string name="valetapeusuario">Ingrese su apellido</string>
    <string name="valetemailusuario">Ingrese su email</string>
    <string name="valetcelusuario">Ingrese su celular</string>
    <string name="valetusureg">Ingrese su usuario</string>
    <string name="valetpassreg">Ingrese su password</string>
    <string name="valetrepassreg">Vuelva a ingresar su password</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>
    <string name="valtvtextovoluntario">Juro solecnemente atender y cumplir con el reparto de las comidas del restaurente EATFREE, Cumpliendo con las normas de higiene y manteniendo el alto prestiguio de los productos que se me encarguen a mi persona.</string>
    <string name="valchkaceptocondiciones">ACEPTO LAS CONDICIONES DE SER MOTORIZADO</string>
    <string name="valbtnregvoluntario">REGISTRAR</string>
    <string name="valtvtituvoluntario">¿Quieres ser Motorizado?</string>
    <string name="valtvesuvoluntario">"GRACIAS YA ERES PARTE DE NUESTRA RED DE MOTORIZADOS "</string>
    <string name="valbtnregistro">REGISTRAR MOTORIZADO</string>
    <string name="vallistaprincipalmotorizado">Pedidos por Gestionar</string>
    <string name="valbtnentrega">Entrega</string>
    <string name="valbbtnnoentrega">No Entrega</string>
    <string name="valtxttituloEnvio">Ingresa tu Código de Envío</string>

</resources>