<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.cliente.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/marca_de_agua"
        android:scaleType="fitXY"
        android:src="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.412"
        app:srcCompat="@color/white" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:id="@+id/tvtitulologin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/colorPressedHighlight"
            android:backgroundTint="?android:attr/colorPressedHighlight"
            android:fontFamily="@font/archivo_black"
            android:text="@string/tvtitulologin"
            android:textAlignment="center"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="   "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etemail"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etpassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btningresar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="@font/archivo_black"
            android:text="@string/btningresar"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_login_24"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/btnregistrarse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="@font/archivo_black"
            android:text="@string/btnregistrarse"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_how_to_reg_24"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btnloginmotorizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>